when creating a new UserAccount, check if loginProvider exists
close #296